<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/backgroundname">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22sp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_how_your_password_should_be"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="14sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_many_characters"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/number_of_characters_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:gravity="center">


    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_symbols"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="22sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/symbol_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center">


    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_numbers"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/number_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="center">


    </androidx.appcompat.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_capital_letters"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="22sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/capital_letter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAlignment="center">


    </androidx.appcompat.widget.AppCompatSpinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp">

    </Space>

    <Button
        android:id="@+id/generate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textSize="22sp"
        android:layout_margin="22dp"
        >

    </Button>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp">

    </Space>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorAccent">

    </TextView>



</LinearLayout>